--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,10 @@
 baseURL = "https://ericr.me/"
 languageCode = "en"
 defaultContentLanguage = "en"
-title = "Hallo"
+title = "Rosenberg Portfolio"
 theme = "uilite"
 disableKinds = ["page", "section", "taxonomy", "taxonomyTerm"]
 
 [Author]
     name = "Eric Rosenberg"
-
 [params]
